--- a/讲义/Python面向对象/模块.md
+++ b/讲义/Python面向对象/模块.md
@@ -1,3 +1,12 @@
+
+
+Python工程的结构
+<img src="模块.assets/image-20220323184600277.png" alt="image-20220323184600277" style="zoom:50%;" />
+
+
+
+
+
 # 模块
 
 
@@ -226,4 +235,133 @@ print(timestamp)
 
 ​	一般在进行程序开发时，不会将所有的代码放到一个文件中，而是将耦合度较低的多个功能写入不同的文件中，制作成模块，并在其他文件中以导入模块的方式使用自定义模块中的内容。
 
-​	Python中的每个文件都可以作为一个模块存在，文件名即为模块名。
+​	Python中的每个文件都可以作为一个模块存在，文件名即为模块名。创建一个名为module01的Python文件，内容如下：
+
+```python
+print("模块1。。。")
+
+def fun01():
+    print("模块1的fun01()函数")
+
+class MyClass01:
+    def fun02(self):
+        print("MyClass01.fun02()")
+```
+
+​	module01文件即可视为一个模块，该模块中定义的类、函数、变量都可以在导入该模块的程序中使用，创建demo01使用module01中的资源，在导入前需要在它们上层同一目录下右键选择Mark Directory as--Source Root，使它们能在同一资源目录下：
+
+```python
+import demo01
+demo01.fun01()
+mClass01 = demo01.MyClass01()
+mClass01.fun02()
+```
+
+<img src="模块.assets/image-20220315161538665.png" alt="image-20220315161538665" style="zoom:50%;" />
+
+
+
+## 5.模块变量
+
+​	依据模块的导入特性，将这些特性用模块的变量来表示，常用变量有：
+
+- **all变量**：定义可以导出的成员，仅对from xx import *有效；
+- **__doc__变量：**文档字符串；
+- **__file__:**模块对应的文件路径名；
+- **__name__变量：**模块自身名字，可以判断是否为主模块，当此模块作为主模块（第一个运行的模块）运行时，__name__绑定__main__，不是主模块，而是被其他模块导入时，存储模块名；
+- **_:**当模块中的内容以单下划线定义时，表示为该模块的隐藏内容。
+
+较大型项目中，一个项目通常由多名开发人员共同开发，为保证各模块整合后的正常运行，Python中提供了__name__属性，它与if条件语句配合使用，若当前模块是启动模块，则其__name__的值为__main__,若该模块被其他模块导入，则__name__的值为文件名。
+
+定义demo03，内容如下：
+
+```python
+# 定义当前模块哪些成员可以被导入
+__all__ = ["fun01", "_fun02", "MyClass"]
+print("模块3.。。")
+def fun01():
+    print("模块3中的fun01()...")
+# 只在模块内部使用的成员可以用_开头
+def _fun02():
+    print("模块3中的fun02()...")
+class MyClass:
+    @staticmethod
+    def fun03():
+        print("MyClass的fun03()...")
+
+```
+
+定义demo04调用demo03中的内容：
+
+```python
+from demo03 import *
+from demo03 import _fun02
+fun01()
+# 隐藏成员不能通过from 模块 import *导入
+# _fun02()
+# 可以通过from demo03 import _fun02形式调用
+_fun02()
+MyClass.fun03()
+
+# 打印注释等文档字符串，可以通过该属性查看文档
+print(__doc__)
+# 打印当前模块的绝对路径
+print(__file__)
+print(__name__)
+```
+
+​	
+
+<img src="模块.assets/image-20220315165803518.png" alt="image-20220315165803518" style="zoom: 50%;" />
+
+
+
+
+
+
+
+# Python中的包
+
+## 1.包结构
+
+​	为了更好的组织Python代码，开发人员通常会根据不同的业务将模块进行分类，并将功能相近的模块划分到同一目录下，如果要想导入这个模块，就得先导入这个模块的包。Python中的包是一个包含__init__.py文件的目录，该目录下还包含一些模块和子包。一个包的结构大致如下：
+
+<img src="模块.assets/image-20220323183823777.png" alt="image-20220323183823777" style="zoom:67%;" />
+
+​	其中__init__.py的作用有两个，第一个是标识当前目录是一个Python包；第二便是模糊导入。如果__init__.py文件中没有生命__all__属性，那么使用"from...import..."导入的内容为空。
+
+
+
+## 2.包的导入
+
+​	包的导入和模块的导入大致相同，也是通过import或from...import...来实现。
+
+在当前工程下新增package，取名Package01，并在保中创建模块mudule_a.py，并定义函数：
+
+```python
+def fun01():
+    print("1包中的fun01()")
+```
+
+再在package01包下创建package02，并创建模块module_b.py，调用mudule_a.py中的函数fun01()：
+
+```python
+def fun02():
+    print("2包中的fun02()")
+```
+
+在当前的根目录下创建demo.py和package01同一级，完成package01和package02下模块函数的调用：
+
+```python
+# from 包.模块 import 成员
+from package01.module_a import fun01
+fun01()
+
+from package01.package02.module_b import fun02
+fun02()
+```
+
+
+
+
+
