--- a/讲义/Python面向对象/模块.md
+++ b/讲义/Python面向对象/模块.md
@@ -363,5 +363,16 @@ fun02()
 
 
 
+## 3.练习
 
+​	在如下结构中自定义方法，完成如下调用：
+
+1. 在main.py中调用skill_deployer.py；
+2. 在skill_deployer.py中调用skill_manager.py
+3. 在skill_manager中调用double_list_helper.py
+4. 在list_helper.py中调用main.py。
+
+
+
+<img src="模块.assets/image-20220323191522324.png" alt="image-20220323191522324" style="zoom:50%;" />
 
