--- a/讲义/Python面向对象/类与面向对象.md
+++ b/讲义/Python面向对象/类与面向对象.md
@@ -811,3 +811,140 @@ test(snail)
 ```
 
 ​	分析运行结果可知，同一个函数会根据参数的类型去调用不同的方法，从而产生不同的结果。
+
+
+
+## 4.练习
+
+1.请用面向对象的思维解决以下问题：
+
+1. 张无忌　教　赵敏　九阳神功
+2. 赵敏　教　张无忌　化妆
+3. 张无忌　上班　挣了　10000
+4. 赵敏　上班　挣了　6000
+5.  体会：对象区分数据的不同
+
+```python
+class Person:
+    def __init__(self, name):
+        self.name = name
+
+    @property
+    def name(self):
+        return self.__name
+
+    @name.setter
+    def name(self, value):
+        self.__name = value
+
+    def teach(self, other, skill):
+        print(self.name, "教", other.name, skill)
+
+    def work(self, money):
+        print(self.name, "上班挣了%d钱" % money)
+
+
+zwj = Person("张无忌")
+zm = Person("赵敏")
+zwj.teach(zm, "九阳神功")
+zm.teach(zwj, "化妆")
+zwj.work(10000)
+zm.work(6000)
+```
+
+2.请用面向对象思想，描述以下场景：
+
+1. 玩家(攻击力)攻击敌人(血量)，敌人受伤(掉血)，还可能死亡(掉装备，加分)。
+2. 敌人(攻击力)攻击玩家，玩家(血量)受伤(掉血/碎屏),还可能死亡(游戏结束)。
+3. 体会：类区别行为的不同
+
+```python
+class Player:
+    def __init__(self, hp, atk):
+        self.hp = hp
+        self.atk = atk
+
+    def attack(self, other):
+        # 打的逻辑
+        print("玩家攻击敌人")
+        # 通过敌人对象地址，调用实例方法.
+        other.damage(self.atk)
+
+    def damage(self, value):
+        print("玩家受伤")
+        self.hp -= value
+        if self.hp <= 0:
+            self.__death()
+
+    def __death(self):
+        print("玩家死喽")
+        print("游戏结束")
+
+
+class Enemy:
+    def __init__(self, hp, atk):
+        self.hp = hp
+        self.atk = atk
+
+    def damage(self, value):
+        # 受伤的逻辑
+        print("敌人受伤了")
+        self.hp -= value
+        if self.hp <= 0:
+            self.__death()
+
+    # 私有的死亡方法
+    def __death(self):
+        # 死亡的逻辑
+        print("死亡")
+        print("掉装备")
+        print("加分")
+
+    def attack(self, other):
+        print("敌人攻击玩家")
+        other.damage(self.atk)
+
+
+p01 = Player(1000, 100)
+e01 = Enemy(200, 10)
+p01.attack(e01)
+e01.attack(p01)
+
+p01.attack(e01)
+```
+
+
+
+
+
+# 学生信息管理系统
+
+![image-20220412105715492](类与面向对象.assets/image-20220412105715492.png)
+
+​    
+
+## 1.需求：
+
+实现对学生信息的增删改查。
+
+## 2.项目分析
+
+![](类与面向对象.assets/2022-04-12_105955.png)
+
+## 3.项目设计(架构)
+
+- **数据模型类：**StudentModel
+
+  ​		数据：编号id，姓名name，年龄age，成绩score
+
+- **逻辑控制类：**StudentManagerController
+
+  ​		学生列表：__stu_list
+
+  ​		行为：获取列表stu_list；添加学生add_student；删除学生remove_student；修改学生update_student；根据成绩排序order_by_score
+
+- **界面视图类：**StudentManagerView
+
+  ​		数据：逻辑控制对象__manager
+
+  ​		行为：显示菜单__display_menu；选择菜单项__select_menu_item；入口逻辑main；输入学生__input_students；输出学生__output_students；删除学生__delete_student；修改学生信息__modify_student；按成绩输出学生__output_student_by_score
