--- a/讲义/Python面向对象/文件与文件路径的操作.md
+++ b/讲义/Python面向对象/文件与文件路径的操作.md
@@ -31,3 +31,93 @@ a:以追加的方式打开文件。
 | w/wb+    | 写入(更新)模式 | 以读写的形式创建文件/二进制文件，若文件已存在，则重写文件    |
 | a+/ab+   | 追加(更新)模式 | 以读写的形式打开文件/二进制文件，但只允许在文件末尾添加数据，若文件不存在，则创建新文件 |
 
+
+
+### 1.2.文件的读取
+
+文件的读取有3种方式，read()，readline()，readlines()：
+
+- read()：从指定文件中读取指定数据；
+
+```python
+文件对象.read([size])
+# 参数size用于设置读取数据的字节数，若没有则一次读取文件的所有数据
+```
+
+
+
+- readline()：从指定文件读取一行数据；
+
+```python
+文件对象.readline()
+```
+
+
+
+- readlines()：一次读取文件的所有数据。
+
+```python
+文件对象.readlines()
+# 使用readlines()方法读取数据后回返回一个列表，文件的每一行对应列表中的一个元素 
+```
+
+
+
+
+
+### 1.3.文件的关闭
+
+​	Python内置函数close()用于关闭文件，该方法不需要参数，直接调用。计算机的内存打开文件的数量是有限的，打开的文件占用系统的资源，降低系统的性能。因此需要用close()方法主动关闭不再使用的文件。
+
+```python
+文件对象.close()
+```
+
+```python
+# 文件的打开
+"""
+file：文件名
+mode:文件打开的方式,r-只读打开，w-只写打开，a-追加打开
+encoding:字文件的编码格式，常见gbk和utf-8
+返回值是一个文件对象
+"""
+txt = open("test.txt", mode='r', encoding="utf-8")
+print(txt)
+# 文件的读取
+buff = txt.read()
+print(buff)
+# 文件的关闭
+txt.close()
+```
+
+
+
+## 2.文件的读写操作
+
+Python提供了write()方法和writlines()方法向文件写入数据：
+
+- write()
+
+```python
+文件对象.write(str)
+# str表示要写入的字符串，若写入成功，则返回本次写入的文件长度
+```
+
+- writelines()
+
+```python
+文件对象.write([str])
+# 向文件写入字符串序列
+```
+
+```python
+# 文件的打开
+file = open('a.txt','w',encoding='utf-8')
+# 文件的写入,若文件不存在，会创建，若文件存在，不执行write()写入内容，会清空内容
+# \n 表示换行，如果没有不会换行
+file.write("hello world\n")
+file.write("人生苦短，快用Python")
+# 关闭
+file.close()
+```
+
