更新文件操作文档

--- a/讲义/Python面向对象/文件与文件路径的操作.md
+++ b/讲义/Python面向对象/文件与文件路径的操作.md
@@ -84,8 +84,22 @@ encoding:字文件的编码格式，常见gbk和utf-8
 txt = open("test.txt", mode='r', encoding="utf-8")
 print(txt)
 # 文件的读取
-buff = txt.read()
-print(buff)
+print("read():")
+buff01 = txt.read()
+print(buff01)
+print("读取文件n个字节数：")
+txt = open("test.txt", mode='r', encoding="utf-8")
+print(txt.read(2))
+# 读取文件一行数据
+txt = open("test.txt", mode='r', encoding="utf-8")
+print("readline():")
+buff02 = txt.readline()
+print(buff02)
+# 读取文件所有数据
+txt = open("test.txt", mode='r', encoding="utf-8")
+print("readlines():")
+buff03 = txt.readlines()
+print(buff03)
 # 文件的关闭
 txt.close()
 ```
@@ -112,12 +126,152 @@ Python提供了write()方法和writlines()方法向文件写入数据：
 
 ```python
 # 文件的打开
-file = open('a.txt','w',encoding='utf-8')
+file = open('a.txt', 'w', encoding='utf-8')
 # 文件的写入,若文件不存在，会创建，若文件存在，不执行write()写入内容，会清空内容
 # \n 表示换行，如果没有不会换行
+print("write()...")
 file.write("hello world\n")
 file.write("人生苦短，快用Python")
+
+# 文件的打开
+file = open('a.txt', 'w', encoding='utf-8')
+# writelines()向文件写入字符串序列
+print("writelines()...")
+str = ["\n" + "life is short,you need python",'\nPython好学']
+file.writelines(str)
+
 # 关闭
 file.close()
 ```
+
+
+
+## 3.文件定位读取
+
+​	在系统中文件的一次打开和关闭之间的读写操作都是连续的。程序总在上次读写的位置进行读写操作，但有时候会指定到某一位置来进行读写操作，这个时候我们就要用到文件读写位置的属性来进行操作。
+
+​	Python提供用于获取文件读写位置及修改文件读写位置的tee()和seek()方法。
+
+### 3.1.tell()方法
+
+​	tell()方法用于获取当前文件读写的位置，格式为：
+
+```python
+text.tell()
+```
+
+```python
+# 文件的打开
+file = open('a.txt', 'r', encoding='utf-8')
+print(file.read(5))  # 读取5个字节
+print(file.tell())  # 15 输入文件读取的位置(汉字为3个字节)
+```
+
+
+
+### 3.2.seek()方法
+
+​	seek()方法用于设置当前文件读写的位置，格式为：
+
+```python
+txt.seek(offset,from)
+```
+
+​	seek()方法的参数offsert表示偏移量， 即读写位置需要移动的字节数；参数from用于指定文件的读写位置，该参数的取值有以下三个：
+
+- 0：表示在开始位置读写
+- 1：表示在当前位置读写
+- 2：表示在末尾位置读写
+
+  ```python
+file = open('a.txt', 'w', encoding='utf-8')
+file.seek(3,0)
+print(file.write("你好！！"))
+file.close()
+  ```
+
+
+
+
+
+## 5.练习：通讯录
+
+​	要求编写通讯录程序，接收用户输入的姓名、电话、qq号、邮箱等信息，将这些信息保存到"通讯录.txt"文件中，实现新建联系人功能；可根据用户输入的联系人姓名查找联系人，展示联系人的姓名、电话等信息，实现查询功能。
+
+```python
+import sys
+import json
+class TelephoneBook:
+    def show_menu(self):  # 用于界面展示
+        print("*" * 20)
+        print("欢迎使用[通讯录] V1.0")
+        print("1. 新建联系人")
+        print("2. 查询联系人")
+        print("0. 退出系统")
+        print("*" * 20)
+    def add_info(self):
+        name_str = input("请输入姓名:")
+        phone_num = input("请输入电话:")
+        qq_num = input("请输入QQ号码:")
+        mail_adr = input("请输入邮箱:")
+        # 将数据封装到字典中
+        card_dict = {"姓名": name_str, "手机号": phone_num,
+                     "qq": qq_num, "mail": mail_adr}
+        f = open("通讯录.txt", mode='a+', encoding='utf-8')
+        # 将字典转换为str，然后再使用write()写入到通讯录的文本文件中
+        f.write(str(card_dict) + '\n')
+        f.close()
+        print(f"成功添加{name_str}为联系人")
+    # 显示联系人信息
+    def show_info(self):
+        file = open("通讯录.txt", mode='r', encoding='utf-8')
+        # 如果通讯录.txt文件不为空时，执行下面代码
+        if len(file.read()) != 0:
+            # 保证每次从开始位置读取
+            file.seek(0, 0)
+            # 读取通讯录.txt文件中的内容
+            file_data = file.read()
+            # 对字符串进行分隔
+            split_info = file_data.split('\n')
+            # 删除多余的字符串
+            split_info.remove(split_info[len(split_info) - 1])
+            name = input("请输入要查询的姓名：")
+            name_li = []       # 用于存储联系人姓名的列表
+            all_info_li = []   # 用于存储所有信息的列表
+            for i in split_info:
+                # 将单引号替换为双引号
+                dict_info = json.loads(i.replace("\'", '\"'))
+                all_info_li.append(dict_info)
+                # 获取所有联系人的姓名
+                name_li.append(dict_info['姓名'])
+            if name in name_li:
+                for person_info in all_info_li:
+                    for title_key, name_value in person_info.items():
+                        if name_value == name:
+                            for title, info_value in person_info.items():
+                                print(title + ":" + info_value)
+            else:
+                print('联系人不存在')
+        else:
+            print("通讯录为空")
+    def main(self):
+        while True:
+            self.show_menu()
+            action_str = input("请选择操作功能:")  # 判断用户输入的功能指令
+            if action_str.isdigit() is True:
+                if int(action_str) == 1:
+                    self.add_info()
+                elif int(action_str) == 2:
+                    self.show_info()
+                elif int(action_str) == 0:
+                    sys.exit()
+            else:
+                print('请输入正确的指令')
+if __name__ == '__main__':
+    tb = TelephoneBook()
+    tb.main()
+
+```
+
+
 
