python文件管理讲义和源码

--- a/讲义/Python面向对象/文件与文件路径的操作.md
+++ b/讲义/Python面向对象/文件与文件路径的操作.md
@@ -192,6 +192,59 @@ file.close()
 
 
 
+## 4.文件的复制和重命名
+
+### 4.1.文件的复制
+
+​	文件的复制即创建文件的副本，此项操作的本质仍是文件的打开、关闭和读写操作。复制文件的基本步骤如下：
+
+1. 打开文件；
+2. 读取文件内容；
+3. 创建新的文件，将数据写入到文件中；
+4. 关闭文件，保存数据。
+
+具体实现如下：
+
+```shell
+# 文件的复制
+file_name = "test.txt"
+source_file = open(file_name,"r",encoding="utf-8")
+all_data = source_file.read()
+flag = file_name.split(".")
+new_file = open(flag[0] + '备份' + ".txt",'w',encoding="utf-8")
+new_file.write(all_data)
+source_file.close()
+new_file.close()
+```
+
+
+
+### 4.2.文件的重命名
+
+​	Python提供了直接用于更改文件名的函数rename()，该函数的语法如下：
+
+```python
+rename(源文件名，新文件名)
+```
+
+需要注意的是：这个函数存在于os模块中，需要导入os模块才能使用：
+
+```python
+# 文件的复制
+import os
+os.rename("test.txt","test01.txt")
+```
+
+需要注意的是：需要重命名的文件必须存在，否则会报错。对于操作系统来说，文件和文件夹都是文件，所以该函数也对文件夹有效：
+
+```python
+import os
+# os.rename("test.txt","test01.txt")
+os.rename("测试","重命名")
+```
+
+
+
 
 
 ## 5.练习：通讯录
@@ -274,4 +327,301 @@ if __name__ == '__main__':
 ```
 
 
+
+## 6.目录的操作
+
+​	os模块定义了一些用于处理文件夹的操作函数，例如创建目录、获取文件列表等函数；除了os模块外，Python中的shutil模块也提供了文件夹的操作。
+
+
+
+### 6.1.创建目录
+
+​	os模块提供了mkdir()函数用于创建目录，语法格式为：
+
+```shell
+os.mkdir(path,mode)
+```
+
+- path:表示要创建的目录，参数mode表示目录的数字权限，该参数在Windows系统下可以忽略。
+
+在创建目录的操作中需要判断目录是否存在，如果存在则提示用户，如果不存在则可以创建并可写入数据：
+
+```python
+# 创建目录
+import os
+dir_path = input("请输入要创建目录：")
+# 判断目录是否存在
+y_or_n = os.path.exists(dir_path)
+if y_or_n is False:
+    os.mkdir(dir_path)
+    new_file=open(os.getcwd()+"\\"+dir_path+"\\"+"dir_demo.txt","w",encoding="utf-8")
+    new_file.write("life is short, use Python.")
+    print("写入成功")
+else:
+    print("该目录已经存在！")   
+```
+
+
+
+### 6.2.删除目录
+
+​	使用shutil模块的rmtree()函数可以实现删除目录，语法格式为：
+
+```python
+rmtree(path)
+path为要删除的目录
+```
+
+```python
+# 删除目录
+import os
+import shutil
+# 判断目录是否存在
+print(os.path.exists("重命名"))
+shutil.rmtree("重命名")
+# 确认目录是否删除
+print(os.path.exists("重命名"))
+```
+
+
+
+### 6.3.获取目录的文件列表
+
+​	os模块中的listdir()函数用户获取文件夹下文件或文件名的列表，该列表按字母顺序排序，语法格式为：
+
+```python
+listdir(path)
+```
+
+```python
+# 获取文件夹列表
+current_path = r"D:\Software"
+print(os.listdir(current_path))
+```
+
+
+
+## 7.文件路径操作
+
+### 7.1.相对路径路径和绝对路径
+
+​	文件的相对路径指某文件（或目录）所在的路径与其他文件（或目录）的路径关系，绝对路径指从盘符开始到当前位置的路径。os模块提供了用于检测目标路径是否是绝对路径isabs()函数和将相对路径规范化为绝对路径的abspath()函数。
+
+- **isabs()函数**
+
+当目标路径为绝对路径时，isabs()函数会返回True，否则会返回False。
+
+```python
+# 路径操作
+import os
+print(os.path.isabs("test01.txt"))
+print(os.path.isabs("D:\Software"))
+```
+
+- **abspath()函数**
+
+当目标文件为相对路径时，使用该函数可以将路径规范化为绝对路径：
+
+```python
+print(os.path.abspath("test01.txt"))
+```
+
+
+
+### 7.2.获取当前路径
+
+​	当前路径即文件、程序或目录当前所处的路径，os模块提供了getcwd()函数用于获取当前路径：
+
+```python
+current_path = os.getcwd()
+print(current_path)
+```
+
+
+
+### 7.3.检测路径的有效性
+
+​	os模块中的exists()用于判断路径是否存在，如果当前路径存在，函数返回True，如果不存在则返回False。
+
+```python
+# 判断路径是否存在
+import  os
+current_path = "D:\Software"
+current_path_file = "D:\Software\jdk-17.0.2"
+print(os.path.exists(current_path))  # True
+print(os.path.exists(current_path_file))  # True
+```
+
+### 7.4.路径的拼接
+
+os模块中join()函数用于拼接，语法格式为：
+
+```python
+os.path.join(path1,[path2,....])
+```
+
+```python
+import os
+path01 = "D:\Software"
+path02 = "jdk-17.0.2"
+# windows下默认使用/分隔
+sumpath = os.path.join(path01, path02)
+print(sumpath)
+
+# 如果后面路径为空，则用\来结尾
+path03 = ""
+sumpath02 = os.path.join(path01, path03)
+print(sumpath02)
+```
+
+
+
+
+
+## 8.练习:实现用户登录
+
+​	登录用户通常分为普通用户登录，管理员登录。在用户登录时，可以根据自身的权限进行选择登录。
+
+要求：
+
+- 实现普通用户和管理员的登录
+- 管理员账号密码在程序中设置，普通用户账号与密码通过注册功能添加
+- 创建文件u_root.txt，写入管理员：
+
+```text
+{'rnum': 'root', 'rpwd': '123456'}
+```
+
+
+
+```python
+# author by Michealzou@126.com
+# 2022/5/12 19:24
+import os
+
+
+# 判断是否首次使用系统
+def is_first_start():
+    if os.path.exists('flag.txt') == False:
+        print('首次启动')
+        flag = open('flag.txt', 'w+')
+        flag.write('1')
+        flag.close()  # 关闭文件
+        init()  # 初始化资源
+        print_login_menu()  # 打印登录菜单
+        user_select()  # 选择用户
+    else:
+        flag = open('flag.txt', 'r')
+        word = flag.read()
+        if len(word) == 1:
+            init()  # 初始化资源
+            print_login_menu()  # 打印登录菜单
+            user_select()  # 选择用户
+
+
+# 初始化管理员
+def init():
+    if os.path.exists('users') == False:
+        file = open('u_root.txt', 'w')  # 创建并打开管理员账户文件
+        root = {'rnum': 'root', 'rpwd': "123456"}
+        file.write(str(root))  # 写入管理员信息
+        file.close()  # 关闭管理员账户文件
+
+        os.mkdir('users')  # 创建普通用户文件夹
+        # else:
+
+
+# 打印登录菜单
+def print_login_menu():
+    print('----用户登录----')
+    print('1-管理员登陆')
+    print('2-普通用户登陆')
+    print('--------------')
+
+
+# 用户选择
+def user_select():
+    while True:
+        user_type_select = input('请选择用户类型')
+        if user_type_select == '1':  # 管理员登陆验证
+            root_login()
+            break
+        elif user_type_select == '2':  # 普通用户
+            while True:
+                select = input('是否需要注册？（y/n）：')
+                if select == 'y' or select == 'Y':
+                    print('----用户注册----')
+                    user_register()  # 用户注册
+                    break
+                elif select == 'n' or select == 'N':
+                    print('----用户登录----')
+                    break
+                else:
+                    print('输入有误，请重新选择')
+            user_login()  # 用户登录
+            break
+        else:
+            print('输入有误，请重新选择')
+
+
+# 管理员登陆
+def root_login():
+    while True:
+        print('****管理员登陆****')
+        root_number = input('请输入账户名：')
+        root_password = input('请输入密码：')
+        file_root = open('u_root.txt', 'r')  # 只读打开文件
+        root = eval(file_root.read())  # 读取账户信息
+        # 信息匹配
+        if root_number == root['rnum'] and root_password == root['rpwd']:
+            print('登陆成功！')
+            break
+        else:
+            print('验证失败')
+
+
+# 用户注册
+def user_register():
+    user_id = input('请输入账户名：')
+    user_pwd = input('请输入密码：')
+    user_name = input('请输入昵称：')
+    user = {'u_id': user_id, 'u_pwd': user_pwd, 'u_name': user_name}
+    user_path = "./users/" + user_id
+    file_user = open(user_path, 'w')  # 创建用户文件
+    file_user.write(str(user))  # 写入
+    file_user.close()  # 保存关闭
+
+
+# 普通用户登录
+def user_login():
+    while True:
+        print('****普通用户登录****')
+        user_id = input('请输入账户名')
+        user_pwd = input('请输入密码：')
+        # 获取user目录中所有的文件名
+        user_list = os.listdir('./users')  # 遍历元组，判断user_id是否在元组中
+        flag = 0
+        for user in user_list:
+            if user == user_id:
+                flag = 1
+                print('登录中····')
+                # 打开文件
+                file_name = './users/' + user_id
+                file_user = open(file_name)
+                # 获取文件内容
+                user_info = eval(file_user.read())
+                if user_pwd == user_info['u_pwd']:
+                    print('登录成功！')
+                    break
+        if flag == 1:
+            break
+        elif flag == 0:
+            print('查无此人！请先注册用户')
+            break
+
+
+if __name__ == '__main__':
+    is_first_start()
+
+```
 
