面向对象代码

--- a/讲义/Python面向对象/类与面向对象.md
+++ b/讲义/Python面向对象/类与面向对象.md
@@ -324,7 +324,7 @@ Example.static_method()  # 也可以由类直接调用
 
 ## 2.继承
 
-​	和其他语言一样，Python在类鱼类之间也具有继承关系，其中被继承的类称为父类，派生的类称为子类，子类在继承父类时，会自动调用父类中的方法和属性。与Java不同的是，python不仅支持单继承，还支持多继承。
+​	和其他语言一样，Python在类与类之间也具有继承关系，其中被继承的类称为父类，派生的类称为子类，子类在继承父类时，会自动调用父类中的方法和属性。与Java不同的是，python不仅支持单继承，还支持多继承。
 
 
 
