--- a/讲义/Python面向对象/模块.md
+++ b/讲义/Python面向对象/模块.md
@@ -288,7 +288,6 @@ class MyClass:
     @staticmethod
     def fun03():
         print("MyClass的fun03()...")
-
 ```
 
 定义demo04调用demo03中的内容：
@@ -328,7 +327,7 @@ print(__name__)
 
 <img src="模块.assets/image-20220323183823777.png" alt="image-20220323183823777" style="zoom:67%;" />
 
-​	其中__init__.py的作用有两个，第一个是标识当前目录是一个Python包；第二便是模糊导入。如果__init__.py文件中没有生命__all__属性，那么使用"from...import..."导入的内容为空。
+​	其中__init__.py的作用有两个，第一个是标识当前目录是一个Python包；第二便是模糊导入。如果__init__.py文件中没有声明__all__属性，那么使用"from...import..."导入的内容为空。
 
 
 
@@ -336,7 +335,7 @@ print(__name__)
 
 ​	包的导入和模块的导入大致相同，也是通过import或from...import...来实现。
 
-在当前工程下新增package，取名Package01，并在保中创建模块mudule_a.py，并定义函数：
+在当前工程下新增package，取名Package01，并在包中创建模块mudule_a.py，并定义函数：
 
 ```python
 def fun01():
@@ -375,4 +374,48 @@ fun02()
 
 
 <img src="模块.assets/image-20220323191522324.png" alt="image-20220323191522324" style="zoom:50%;" />
+
+
+
+**生成6位随机验证码：**
+
+```python
+"""
+验证码
+
+"""
+"""
+随机生成6位的验证码（字母数字随机组合，包含大小写）
+chr()函数返回值是当前整数对应的ascii字符。
+"""
+import random
+
+
+def verifycode():
+    code_list = ''
+    # 每一位验证码都有三种可能（大写字母，小写字母，数字）
+    for i in range(6):  # 控制验证码生成的位数
+        state = random.randint(1, 3)
+        if state == 1:
+            # ASCII编码集中大写字母A-Z对应65-90位
+            first_kind = random.randint(65, 90)  # 大写字母
+            random_uppercase = chr(first_kind)
+            code_list = code_list + random_uppercase
+
+        elif state == 2:
+            # ASCII编码集中小写字母a-z对应97-122位
+            second_kinds = random.randint(97, 122)  # 小写字母
+            random_lowercase = chr(second_kinds)
+            code_list = code_list + random_lowercase
+        elif state == 3:
+            third_kinds = random.randint(0, 9)
+            code_list = code_list + str(third_kinds)
+    return code_list
+
+
+if __name__ == '__main__':
+    verifycode = verifycode()
+    print(verifycode)
+
+```
 
