新增海龟画图520爱心

--- a/讲义/Python面向对象/正则表达式.md
+++ b/讲义/Python面向对象/正则表达式.md
@@ -26,6 +26,8 @@ print(re.findall(r"《\w+?》",s))
 
 ### 1.1.元字符
 
+​	正则表达式知识一套规则，缺少编程语言的支持毫无意义。Python通过元字符很好的支持了这套规则。
+
 ​	元字符指在正则表达式中具有特殊含义的专用字符，可以用来规定其前导字符（位于元字符之前的字符）在目标对象中出现的模式。正则表达式中的元字符一般由特殊字符和符号组成，常用字符见下表：
 
 | 元字符    | 含义                                         |
@@ -121,6 +123,43 @@ print(re.findall(r"《\w+?》",s))
   （1）Jan(uary)?：匹配子组"uary"0次或1次，匹配结果可能是Jan或January;
 
   （2）Feb(ruary)?：匹配子组"ruary"0次或1次，匹配结果可能是Feb或February。
+
+```python
+import re
+# 或
+print(re.findall("ab|cd","abcdefg"))  # ['ab', 'cd']
+
+# 匹配任意一个字符
+print(re.findall("张.","张三"))  # ['张三']
+
+# 字符集[]，取反^
+print(re.findall("[^张].","张三李四"))  # ['张三']
+print(re.findall("[^aeiou]","Hello World"))  # ['H', 'l', 'l', ' ', 'W', 'r', 'l', 'd']
+
+# ^匹配目标字符串开始位置
+print(re.findall("^James","James,Hello"))  # ['James']
+
+# $匹配目标字符串结尾位置
+print(re.findall("James$","Hello,James"))  # ['James']
+
+# ^和$必须出现在字符串开头和结尾位置
+# * 匹配前面的字符0次或多次
+print(re.findall("wo*","wooooo~~w!"))  # ['wooooo', 'w']
+
+# 匹配所有以大写字母开头的单词
+print(re.findall("[A-Z][a-z]*","How are you? Fine,Tankyou"))  # ['How', 'Fine', 'Tankyou']
+
+# + 匹配前面的字符出现1次或多次
+print(re.findall("[A-Z][a-z]+","How are you? Fine,Tankyou"))  # ['How', 'Fine', 'Tankyou']
+
+# 如果是单个单词，+不能匹配
+print(re.findall("[A-Z][a-z]+","A Boy"))  # ['Boy']
+
+# ？ 匹配前面的字符出现0次或1次
+print(re.findall("ab?","abbbbb,abcde"))  # ['ab', 'ab']
+print(re.findall("-?[0-9]+","22 -23 24 -25"))  # 匹配所有正数负数
+print(re.findall("[^ ]+","Port-9 Error #404# %@STD"))  # 匹配所有
+```
 
 
 
