--- a/讲义/Python面向对象/面向对象+异常+模块+文件/类与面向对象.md
+++ b/讲义/Python面向对象/面向对象+异常+模块+文件/类与面向对象.md
@@ -12,7 +12,48 @@
 
 ​	面向对象编程思想力求在程序中对事物的描述与该事物在现实中的形态保持一致。为此类的概念就产生了。某一些事物中具有相同的特征，我们称这一些事物为某类。如汽车有品牌、价格等的不同，但我们都具备了出行的功能，所以无论是奔驰宝马，还是货车客车，我们都称之为汽车这一类。
 
+```python
+"""
+    类　与　　对象
+        类：　抽象的概念　　 类别
+          　　 人　
+            数据(变量)成员：身高／体重
+            行为(函数/方法)成员：吃饭／睡觉
 
+        对象：具体的事物    个体
+            ztr
+            数据成员：175/60
+            行为成员：调用
+
+            kk
+            数据成员：170/70
+            行为成员：调用
+"""
+# 类
+class Wife:
+    # 数据成员
+    # 数据成员越多约占内存
+    def __init__(self,name,sex):
+        # self 是调用当前方法的对象地址
+        self.name = name
+        self.sex = sex
+
+    # 行为成员
+    def play(self):
+        """
+            一起玩耍
+        """
+        print(self.name + "玩耍")
+
+# 创建对象,实际在调用__init__方法
+w01 = Wife("莉莉","女")# 自动将对象地址传入方法
+# 调用对象的行为
+w01.play()# 自动将对象地址传入方法
+
+
+```
+
+![](类与面向对象.assets/对象内存图.jpg)
 
 ### 1.1.类的定义
 
