更新安装tableau文档

--- a/讲义/数据可视化/数据可视化.md
+++ b/讲义/数据可视化/数据可视化.md
@@ -141,3 +141,13 @@
 ​	在官方网站（http://www.tableau.com/zh-cn/products/trial）可以下载最新的免费试用版本， 填写“商务电子邮件”地址，然后单击“下载免费试用版”按钮
 
 #### 2.1.2 安装步骤
+
+- 选择自定义安装，选择安装路径，并取消产品更新：
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202307042209112.png" alt="image-20230704220913929" style="zoom: 50%;" />
+
+- 安装后，复制tabui.dll到软件安装目录下替换原文件（tabui.dll在解压得到的Patch文件夹下，然后将文件复制到安装目录下替换原文件（进入到安装目录下的bin目录））
+
+- 运行软件，如果提示注册，随便输入信息注册一次：
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202307042213327.png" alt="image-20230704221314161" style="zoom: 33%;" />
