新增numpy.xmind和文档更新_numpy属性方法

--- a/讲义/数据可视化/数据分析总.md
+++ b/讲义/数据可视化/数据分析总.md
@@ -453,6 +453,11 @@ print(c, '->c')  # [1 2 3 4 5 6 7 8 9] ->c
 ```python
 import numpy as np
 a = np.arange(1, 10)
+import numpy as np
+
+
+a = np.arange(1, 10)
+# 一维数组
 print(a)  # 1 2 3 4 5 6 7 8 9
 print(a[:3])  # 1 2 3
 print(a[3:6])   # 4 5 6
@@ -466,21 +471,55 @@ print(a[:])  # 1 2 3 4 5 6 7 8 9
 print(a[::3])  # 1 4 7
 print(a[1::3])  # 2 5 8
 print(a[2::3])  # 3 6 9
+
+
+# 二维数组
+a.resize(3, 3)
+print(a)
+"""
+    切前两行前两列
+    [[1 2]
+     [4 5]]
+"""
+print(a[:2, :2])
+"""
+    一三两行
+ [[1 2 3]
+ [7 8 9]]   
+"""
+print(a[::2, :])
 ```
 
 **ndarray数组的掩码操作**
 
+实际是拿到复合掩码的子集
+
 ```python
 import numpy as np
+# 基于bool类型
 a = np.arange(1, 10)
-mask = [True, False,True, False,True, False,True, False,True, False]
+mask = [True, False,True, False,True, False,True, False,True]
+print(a[mask])  # [1 3 5 7 9]
+
+
+# 1-100中既是3也是7的倍数
+a = np.arange(1, 100)
+mask = (a % 3 == 0) & (a % 7 == 0)
 print(a[mask])
+
+# 基于索引的掩码
+names = np.array(['Chuizi', 'Huawei', 'Oppo', 'Xiaomi', 'Vivo'])
+rank = [1, 3, 4, 2, 0]
+print(names[rank])
+# ['Huawei' 'Xiaomi' 'Vivo' 'Oppo' 'Chuizi']
 ```
 
 **多维数组的切片操作**
 
 ```python
 import numpy as np
+
+# 三维数组切片
 a = np.arange(1, 28)
 a.resize(3,3,3)
 print(a)
@@ -491,6 +530,10 @@ print(a[:, 1, :])
 #切出0页的1行1列
 print(a[0, :, 1])		
 ```
+
+
+
+
 
 ##### 多维数组的组合与拆分
 
@@ -504,7 +547,13 @@ b = np.arange(7, 13).reshape(2, 3)
 c = np.vstack((a, b))
 # 垂直方向完成拆分操作，生成两个数组
 d, e = np.vsplit(c, 2)
+print(c)
+print(d, e)
 ```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202307211726577.png" alt="image-20230721172651369" style="zoom: 50%;" />
+
+
 
 水平方向操作：
 
@@ -516,7 +565,13 @@ b = np.arange(7, 13).reshape(2, 3)
 c = np.hstack((a, b))
 # 水平方向完成拆分操作，生成两个数组
 d, e = np.hsplit(c, 2)
+print(c)
+print(d, e)
 ```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202307211727829.png" alt="image-20230721172754700" style="zoom:50%;" />
+
+
 
 长度不等的数组组合：
 
@@ -542,7 +597,11 @@ b = np.arange(7, 13).reshape(2, 3)
 i = np.dstack((a, b))
 # 深度方向（3维）完成拆分操作，生成两个数组
 k, l = np.dsplit(i, 2)
+print(i)
+print(k, l)
 ```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202307211729999.png" alt="image-20230721172943866" style="zoom:50%;" />
 
 多维数组组合与拆分的相关函数：
 
@@ -565,13 +624,15 @@ np.split(c, 2, axis=0)
 ```python
 a = np.arange(1,9)		#[1, 2, 3, 4, 5, 6, 7, 8]
 b = np.arange(9,17)		#[9,10,11,12,13,14,15,16]
-#把两个数组摞在一起成两行
+#把两个数组摞在一起成两行-2行8列
 c = np.row_stack((a, b))
 print(c)
-#把两个数组组合在一起成两列
+#把两个数组组合在一起成两列-8行2列
 d = np.column_stack((a, b))
 print(d)
 ```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202307211743541.png" alt="image-20230721174310365" style="zoom:50%;" />
 
 #### 2.1.6.ndarray类的其他属性
 
