更新数据可视化

--- a/讲义/数据可视化/第三章  图标辅助元素的定制.md
+++ b/讲义/数据可视化/第三章  图标辅助元素的定制.md
@@ -306,10 +306,8 @@ plt.show()
 ​	使用pyplot模块的grid()函数可以显示图表中的网格。其语法格式如下：
 
 ```python
-grid(b=None, which='major', axis='both', **kwargs) 
+grid(which='major', axis='both', **kwargs) 
 ```
-
-- `b`：表示是否显示网格。
 
 - `which`：表示显示网格的类型，默认为major。
 
