数据可视化——图表美化

--- a/讲义/数据可视化/第四章  图表样式美化.md
+++ b/讲义/数据可视化/第四章  图表样式美化.md
@@ -456,7 +456,7 @@ import matplotlib.style as ms
 print(ms.available)
 ```
 
-<img src="C:/Users/HP/AppData/Roaming/Typora/typora-user-images/image-20231008170937628.png" alt="image-20231008170937628" style="zoom:33%;" />
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310100858609.png" alt="image-20231008170937628" style="zoom:33%;" />
 
 ​	使用matplotlib库中的use()函数可以切换图表的主题风格。
 
@@ -479,4 +479,82 @@ plt.show()
 ```
 
 <img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310081713649.png" alt="image-20231008171224892" style="zoom:50%;" />
+
+## 7.填充区域
+
+### 7.1.填充多边形或曲线之间的区域
+
+​	matplotlib中提供了多个函数用于填充多边形或区域，分别为`fill()`、`fill_between()`和`fill_betweenx()`，其中fill()函数用于填充多边形，`fill_between()`或`fill_betweenx()`函数分别用于填充两条水平曲线或垂直曲线之间的区域。 
+
+1.**使用`fill()`函数填充多边形：**
+
+```python
+fill(*args, data=None, facecolor, edgecolor, linewidth, **kwargs)
+```
+
+- `*args`：表示x坐标、y坐标或颜色的序列。
+- `facecolor`：表示<font color='red'>填充的背景颜色</font>。
+- `edgecolor`：表示<font color='red'>边框的颜色</font>。
+- `linewidth`：表示<font color='red'>边框的宽度</font>。
+
+2.**使用`fill_betweenx()`函数填充两条垂直曲线之间的区域：**
+
+```python
+fill_between(x, y1, y2=0, where=None, interpolate=False, step=None,  data=None, **kwargs)
+```
+
+- `x`：表示x轴坐标的序列。
+- `y1`：表示<font color='red'>第一条曲线的y轴坐标</font>。
+- `y2`：表示<font color='red'>第二条曲线的y轴坐标</font>。
+- `where`：布尔值，表示<font color='red'>要填充区域的条件</font>。y1>y2说明第一条曲线位于第二条曲线上方时填充；y1<y2说明第二条曲线位于第一条曲线上方时填充。
+
+```python
+fill_betweenx(y, x1, x2=0, where=None, step=None, interpolate=False, data=None, **kwargs)
+```
+
+- `y`：表示y轴坐标的序列。
+- `x1`：表示<font color='red'>第一条曲线的x轴坐标</font>。
+- `x2`：表示<font color='red'>第二条曲线的x轴坐标</font>。
+- `where`：布尔值，表示<font color='red'>要填充区域的条件</font>。x1>x2说明第一条曲线位于第二条曲线右方时填充；y1<y2说明第二条曲线位于第一条曲线右方时填充。
+
+### 7.2.彩色的“雪花”
+
+​	雪花一般呈六角形，且通体为白色。本实例要求使用matplotlib绘制一个由多个六角形组成的雪花形状的多边形，并将该多边形填充为浅橙色 。
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310100907379.png" alt="image-20231010090724276" style="zoom:50%;" />
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+def koch_snowflake(order, scale=10):
+    def _koch_snowflake_complex(order):
+        if order == 0:
+            # 初始三角形
+            angles = np.array([0, 120, 240]) + 90
+            return scale / np.sqrt(3) * np.exp(np.deg2rad(angles) * 1j)
+        else:
+            ZR = 0.5 - 0.5j * np.sqrt(3) / 3
+            p1 = _koch_snowflake_complex(order - 1)  # 起点
+            p2 = np.roll(p1, shift=-1)  # 终点
+            dp = p2 - p1  # 连接向量
+            new_points = np.empty(len(p1) * 4, dtype=np.complex128)
+            new_points[::4] = p1
+            new_points[1::4] = p1 + dp / 3
+            new_points[2::4] = p1 + dp * ZR
+            new_points[3::4] = p1 + dp / 3 * 2
+            return new_points
+
+    points = _koch_snowflake_complex(order)
+    x, y = points.real, points.imag
+    return x, y
+
+
+x, y = koch_snowflake(order=2)
+fig = plt.figure()
+ax = fig.add_subplot(111)
+ax.fill(x, y, facecolor='skyblue', edgecolor='blue', linewidth=3)
+plt.title("彩色的雪花")
+plt.show()
+```
 
