--- a/讲义/数据可视化/第五章  子图的绘制及坐标轴共享.md
+++ b/讲义/数据可视化/第五章  子图的绘制及坐标轴共享.md
@@ -125,3 +125,190 @@ plt.show()
 
 <img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310201133488.png" alt="image-20231020113321404" style="zoom:50%;" />
 
+### 1.4.实例：部分国家养猫与养狗人群比例分析
+
+​	随着人们生活水平的提高，许多人都会在家里养一些萌宠，有时还会在抖音上分享萌宠日常的可爱视频。
+
+​	本实例要求根据下表的数据，将整个画布规划成<font color='red'>1*2的矩阵区域</font>，并在<font color='red'>索引为1和索引为2</font>的区域中分别绘制反映养猫人群比例与养狗人群比例的<font color='red'>条形图 </font>。
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261033114.png" alt="image-20231026103157433" style="zoom:50%;" />
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261032347.png" alt="image-20231026103203217" style="zoom:50%;" />
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261033089.png" alt="image-20231026103350018" style="zoom:50%;" />
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+plt.rcParams['font.sans-serif'] = ['SimHei']
+plt.rcParams['axes.unicode_minus'] = False
+
+# 添加无指向型注释文本
+def autolabel(ax, rects):
+    """ 在每个矩形条上方附加一个文本标签，以显示其高度"""
+    for rect in rects:
+        width = rect.get_width()  # 获取每个矩形条的高度
+        ax.text(width + 3, rect.get_y(), s='{}'.format(width),
+                ha='center', va='bottom')
+y = np.arange(12)
+x1 = np.array([19, 33, 28, 29, 14, 24, 57, 6, 26, 15, 27, 39])
+x2 = np.array([25, 33, 58, 39, 15, 64, 29, 23, 22, 11, 27, 50])
+
+labels = np.array(['中国', '加拿大', '巴西', '澳大利亚', '日本', '墨西哥',
+                   '俄罗斯', '韩国', '瑞士', '土耳其', '英国', '美国'])
+
+# 将画布规划为1x2的矩阵区域，依次在每个区域中绘制子图
+fig, (ax1, ax2) = plt.subplots(1, 2)
+barh_rects = ax1.barh(y, x1, height=0.5, tick_label=labels, color='#FFA500')
+ax1.set_xlabel('人群比例(%)')
+ax1.set_title('部分国家养猫人群的比例')
+ax1.set_xlim(0, x1.max() + 10)
+autolabel(ax1, barh_rects)
+barh2_rects = ax2.barh(y, x2, height=0.5, tick_label=labels, color='#10B2AA')
+ax1.set_xlabel('人群比例(%)')
+ax1.set_title('部分国家养猫人群的比例')
+ax2.set_xlim(0, x2.max() + 10)
+autolabel(ax2, barh2_rects)
+
+# 调整他子图之间的距离
+plt.tight_layout()
+plt.show()
+```
+
+
+
+## 2.绘制自定义区域的子图
+
+### 2.1.绘制自定义区域子图
+
+​	使用pyplot模块的`subplot2grid()`函数可以将整个画布规划成非等分布局的区域，并可在选中的某个区域中绘制单个子图。 语法格式如下：
+
+```python
+ubplot2grid(shape, loc, rowspan=1, colspan=1, fig=None, **kwargs)
+```
+
+- `shape`：表示<font color='red'>规划的区域结构</font>，该参数接收一个包含两个整型数据的元组，元组中第1个元素表示规划区域的行数，第2个元素代表规划区域的列数。
+- `loc`：表示<font color='red'>选择区域的位置</font>，该参数接收一个包含两个整型数据的元组，元组中第1个元素表示子图所在的行数（行数从0开始），第2个元素表示子图所在的列数（列数从0开始）。
+- `rowspan`：表示<font color='red'>向下跨越的行数</font>，默认为1。
+- `colspan`：表示<font color='red'>向右跨越的列数</font>，默认为1。
+
+```python
+import matplotlib.pyplot as plt
+
+# 将画布规划成2x3的矩阵区域，之后在第0行第2列的区域中绘制子图
+ax1 = plt.subplot2grid((2, 3), (0, 2))
+ax1.plot([1, 2, 3, 4, 5])
+# 画布被规划成2x3的矩阵区域，之后在第一行第1-2列的区域中绘制子图
+ax2 = plt.subplot2grid((2, 3), (1, 1), colspan=2)
+ax2.plot([1, 2, 3, 4, 5])
+plt.show()
+```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261103801.png" alt="image-20231026110328723" style="zoom:50%;" />
+
+### 2.2.实例：2017年与2018年抖音用户分析
+
+​	抖音是一款音乐创意短视频社交软件，该软件自2016年9月上线以来受到越来越多年轻人的欢迎。用户可以通过这款软件选择歌曲，拍摄音乐短视频，生成自己的作品。 
+
+​	本实例要求根据下表的数据，使用3个子图进行展示：在<font color='red'>第0~1行第0~1列的区域中，绘制</font>说明2018年相比于2017年人群增长倍数的<font color='red'>柱形图</font>；在<font color='red'>第2行第0列、第2行第1列的区域</font>中，分别绘制说明2017年、2018年抖音用户地区分布比例的<font color='red'>饼图</font>。
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261105253.png" alt="image-20231026110544185" style="zoom:50%;" />
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261105811.png" alt="image-20231026110548742" style="zoom:50%;" />
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261106238.png" alt="image-20231026110606161" style="zoom:50%;" />
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+plt.rcParams['font.sans-serif'] = ['SimHei']
+plt.rcParams['axes.unicode_minus'] = False
+
+data_2017 = np.array([21, 35, 22, 19, 3])
+data_2018 = np.array([13, 32, 27, 27, 1])
+x = np.arange(5)
+y = np.array([51, 73, 99, 132, 45])
+labels = np.array(['一线城市', '二线城市', '三线城市', '四线及以外', '其他国家及地区'])
+
+# 平均增长倍数
+average = 75
+bar_width = 0.5
+# 添加无指向型注释文本
+def autolabel(ax, rects):
+    """ 在每个举行条的上方附加一个文本标签，以显示其高度"""
+    for rect in rects:
+        height = rect.get_height()  # 获取每个矩形条的高度
+        ax.text(rect.get_x() + bar_width / 2, height + 3,
+                s='{}'.format(height), ha='center', va='bottom')
+
+# 第一个子图
+ax_one = plt.subplot2grid((3, 2), (0, 0), rowspan=2, colspan=2)
+bar_rects = ax_one.bar(x, y, tick_label=labels, color='#20B2AA',
+                       width=bar_width)
+ax_one.set_title('抖音2018vs2017人群增长倍数')
+ax_one.set_ylabel('增长倍数')
+ax_one.set_ylim(0, y.max() + 20)
+ax_one.axhline(y=75, ls='--', lw=1, color='gray')
+
+# 第二个子图
+ax_two = plt.subplot2grid((3, 2), (2, 0))
+ax_two.pie(data_2017, radius=1.5, labels=labels, autopct='%3.1f%%',
+           colors=['#2F4F4F', '#FF0000', '#A9A9A9', '#FFD700', '#B0C4DE'])
+ax_two.set_title('2017年抖音用户地区分布的比例')
+
+# 第三个子图
+ax_thr = plt.subplot2grid((3, 2), (2, 1))
+ax_thr.pie(data_2018, radius=1.5, labels=labels, autopct='%3.1f%%',
+           colors=['#2F4F4F', '#FF0000', '#A9A9A9', '#FFD700', '#B0C4DE'])
+ax_thr.set_title('2018年抖音用户地区分布的比例')
+
+# 调整子图之间的距离
+plt.tight_layout()
+plt.show()
+```
+
+
+
+## 3.共享子图坐标
+
+​	当使用subplots()函数绘制子图时，可以通过该函数的<font color='red'>sharex</font>或<font color='red'>sharey</font>参数控制是否共享<font color='red'>x轴或y轴</font>。`sharex`或`sharey`参数支持<font color='red'>False或'none'、True或'all'、'row'、'col'</font>中任一取值。
+
+- `True或'all'`：表示所有子图之间共享x轴或y轴。
+- `False或'none'`：表示所有子图之间不共享x轴或y轴。
+- `'row'`：表示每一行的子图之间共享x轴或y轴。
+- `'col'`：表示每一列的子图之间共享x轴或y轴。
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261140020.png" alt="image-20231026114026919" style="zoom:50%;" />
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+plt.rcParams['font.sans-serif'] = ['SimHei']
+plt.rcParams['axes.unicode_minus'] = False
+x1 = np.linspace(0, 2*np.pi, 400)
+x2 = np.linspace(0.01, 10, 100)
+x3 = np.random.rand(10)
+x4 = np.arange(0, 6, 0.5)
+y1 = np.cos(x1**2)
+y2 = np.sin(x2)
+y3 = np.linspace(0, 3, 10)
+y4 = np.power(x4, 3)
+
+# 共享每一列子图之间的x轴
+fig, ax_arr = plt.subplots(2, 2, sharex='col')
+ax1 = ax_arr[0, 0]
+ax1.plot(x1, y1)
+ax2 = ax_arr[0, 1]
+ax2.plot(x2, y2)
+ax3 = ax_arr[1, 0]
+ax3.scatter(x3, y3)
+ax4 = ax_arr[1, 1]
+ax4.scatter(x4, y4)
+plt.show()
+```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261231798.png" alt="image-20231026123158700" style="zoom:50%;" />
+
