完成数据可视化分析-第五章

--- a/讲义/数据可视化/第五章  子图的绘制及坐标轴共享.md
+++ b/讲义/数据可视化/第五章  子图的绘制及坐标轴共享.md
@@ -271,7 +271,9 @@ plt.show()
 
 
 
-## 3.共享子图坐标
+## 3.共享子图坐标轴
+
+### 3.2.共享相邻子图的坐标轴
 
 ​	当使用subplots()函数绘制子图时，可以通过该函数的<font color='red'>sharex</font>或<font color='red'>sharey</font>参数控制是否共享<font color='red'>x轴或y轴</font>。`sharex`或`sharey`参数支持<font color='red'>False或'none'、True或'all'、'row'、'col'</font>中任一取值。
 
@@ -311,4 +313,266 @@ plt.show()
 ```
 
 <img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310261231798.png" alt="image-20231026123158700" style="zoom:50%;" />
+
+### 3.2.共享非相邻子图的坐标轴
+
+​	当使用pyplot的subplot()函数绘制子图时，也可以将<font color='red'>代表其它子图的变量赋值给该函数的`sharex`或`sharey`参数</font>，此时可以共享非相邻子图之间的坐标轴。
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+x1 = np.linspace(0, 2*np.pi, 400)
+y1 = np.cos(x1**2)
+x2 = np.linspace(0.01, 10, 100)
+y2 = np.sin(x2)
+ax_one = plt.subplot(221)
+ax_one.plot(x1, y1)
+# 共享子图ax_one和ax_two的x轴
+ax_two = plt.subplot(224, sharex=ax_one)
+ax_two.plot(x2, y2)
+
+plt.show()
+```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311649746.png" alt="image-20231031164946590" style="zoom:50%;" />
+
+### 3.3.实例：某地区全年气温和水量的关系
+
+​	气候是地球上某一地区大气的多年平均状况，主要有光照、气温、降水等气候要素，其中气温、降水是反映一个地区气候特征的重要指标。
+
+​	本实例要求根据下表的数据，将月份列的数据作为x轴的刻度标签，将平均气温、降水量、蒸发量三列的数据作为y轴的数据，在<font color='red'>同一绘图区域中分别绘制反映平均气温、降水量、蒸发量关系的图表</font>。
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311651751.png" alt="image-20231031165115676" style="zoom:50%;" />
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311651064.png" alt="image-20231031165122987" style="zoom:50%;" />![image-20231031165133693](https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311651775.png)
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311651064.png" alt="image-20231031165122987" style="zoom:50%;" />![image-20231031165133693](https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311651775.png)
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+plt.rcParams['font.sans-serif'] = ['SimHei']
+plt.rcParams['axes.unicode_minus'] = False
+
+month_x = np.arange(1, 13, 1)
+# 平均气温
+data_temp = np.array([2.0, 2.2, 3.3, 4.5, 6.3, 10.2, 20.3,
+                     33.4, 23.0, 16.5, 12.0, 6.2])
+# 降水量
+data_precipitation = np.array([2.6, 5.9, 9.0, 26.4, 28.7, 70.7,
+                               175.6, 182.2, 48.7, 18.8, 6.0, 2.3])
+# 蒸发量
+data_evaporation = np.array([2.0, 4.9, 7.0, 23.2, 25.6, 76.7, 135.6,
+                             182.2, 48.7, 18.8, 6.0, 2.3])
+
+labels = ['1月', '2月', '3月', '4月', '5月', '6月', '7月', '8月'
+          , '9月', '10月', '11月', '12月']
+fig, ax = plt.subplots()
+bar_ev = ax.bar(month_x, data_evaporation, color='orange',
+                tick_label=labels)
+bar_pre = ax.bar(month_x, data_precipitation, bottom=data_evaporation,
+                 color='green')
+ax.set_ylabel('水量(ml)')
+ax.set_title('平均气温和降水量、蒸发量的关系')
+ax_right = ax.twinx()  # 该方法共享同一子图的坐标轴
+line = ax_right.plot(month_x, data_temp, 'o-m')
+ax_right.set_ylabel('气温($\circ$C)')
+# 添加图例
+plt.legend([bar_ev, bar_pre, line[0]], ['蒸发量', '降水量', '平均气温'],
+           shadow=True, fancybox=True)
+plt.show()
+```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311705391.png" alt="image-20231031170516295" style="zoom:50%;" />
+
+## 4.子图的布局
+
+​	当带有标题的多个子图并排显示时，多个子图会因区域过于紧凑而出现标题和坐标轴之间相互重叠的问题，而且子图元素的摆放过于紧凑，影响用户的正常查看。matplotlib中提供了一些调整子图布局的方法，包括<font color='red'>约束布局、紧密布局和自定义布局</font>，通过这些方法可以合理布局多个子图。 
+
+### 4.1.约束布局
+
+​	约束布局是指通过一系列限制来确定画布中元素的位置的方式，它预先会确定一个元素的绝对定位，之后以该元素的为基点将其它元素进行绝对定位，从而灵活地定位和调整元素的位置。 
+
+​	matplotlib在绘制多子图时默认并未启用约束布局，它提供了两种方式启用约束布局：第一种方式是使用`subplots()`或`figure()`函数的`constrained_layout`参数，第二种方式是修改`figure.constrained_layout.use`配置项。
+
+- **第一种：**在使用`subplots()`或`figure()`函数创建子图或画布时，可以将这些函数的`constrained_
+  layout`参数的值设置为True，以启用约束布局来调整图表元素的位置。
+
+```python
+plt.subplots(constrained_layout=True)
+```
+
+- **第二种：**`matplotlib`可以通过`rcParams`字典或`rc()`函数修改`figure.constrained_layout.use`配置项的值为True，以启用约束布局来调整图表元素的位置。
+
+```python
+plt.rcParams['figure.constrained_layout.use'] = True
+```
+
+​	除此之外，通过以下配置项或者是Figure类对象的方法可以使用约束布局或者手动调整子图的内边距。
+
+- `figure.constrained_layout.w_pad/ h_pad`：表示绘图区域的内边距。
+- `figure.constrained_layout.wspace/ hspace`：表示子图之间的间隙，默认为 0.02。
+- `set_constrained_layout()`：设置是否使用约束布局。若该方法传入参数None，则说明使用配置文件中`rcParams['figure.constrained_layout.use']`指定的值。
+- `set_constrained_layout_pads()`：设置子图的内边距。
+
+​	约束布局仅适用于调整刻度标签、轴标签、标题和图例的位置，而不会调整子图其他元素的位置。因此，使用约束布局后的子图之间仍然会出现图表元素被裁剪或重叠的问题。
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+fig, axs = plt.subplots(2, 2, constrained_layout=True)
+ax_one = axs[0, 0]
+ax_one.set_title('Title')
+ax_two = axs[0, 1]
+ax_one.set_title('Title')
+ax_thr = axs[1, 0]
+ax_thr.set_title('Title')
+ax_fou = axs[1, 1]
+ax_fou.set_title('Title')
+plt.show()
+```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311715557.png" alt="image-20231031171515450" style="zoom:50%;" />
+
+### 4.2.紧密布局
+
+​	紧密布局采用紧凑的形式将子图排列到画布中，仅适用于刻度标签、坐标轴标签和标题位置的调整。
+pyplot中提供了两种实现紧密布局的方式。
+
+- **第一种**：使用`tight_layout()`函数。
+
+​	matplotlib在1.1版本中引入了tight_layout()函数，通过该函数可以调整子图的内边距及子图的间隙，使子图能适应画布的绘图区域。
+
+```python
+tight_layout(pad=1.08, h_pad=None, w_pad=None, rect=None) 
+```
+
+​	`pad`：表示画布边缘与子图边缘之间的空白区域的大小，默认为1.08。
+​	`h_pad，w_pad`：表示相邻子图之间的空白区域的大小。
+​	`rect`：表示调整所有子图位置的矩形区域的四元组(left, bottom, right, top)，默认为 (0,0,1,1)。
+
+​	当pad参数设为0时，空白区域的文本会出现被裁剪的现象，之所以产生文本部分缺失的情况，可能是因为算法错误或受到算法的限制。因此，官方建议pad参数的取值应至少大于0.3。
+
+- **第二种**：修改`figure.autolayoutrcParam` 配置项。
+
+​	pyplot可以通过rcParams字典或rc()函数修改figure.autolayoutrcParam配置项的值为True，使子图元素能适应画布的绘图区域。
+
+```python
+plt.rcParams['figure.autolayoutrcParam'] = True
+```
+
+
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+fig, axs = plt.subplots(2, 2)
+ax_one = axs[0, 0]
+ax_one.set_title('Title')
+ax_two = axs[0, 1]
+ax_one.set_title('Title')
+ax_thr = axs[1, 0]
+ax_thr.set_title('Title')
+ax_fou = axs[1, 1]
+ax_fou.set_title('Title')
+# 调整子图之间的间距
+plt.tight_layout(pad=0.4, w_pad=0.5, h_pad=2)
+plt.show()
+```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311720654.png" alt="image-20231031172035554" style="zoom:50%;" />
+
+### 4.3.自定义布局
+
+​	matplotlib的gridspec模块是专门指定画布中子图位置的模块，该模块中包含一个GridSpec类，通过<font color='red'>显式地创建GridSpec类对象来自定义画布中子图的布局结构</font>，使得子图能够更好地适应画布。
+
+```python
+GridSpec(nrows, ncols, figure=None, left=None, bottom=None, right=None, top=None, wspace=None, hspace=None, width_ratios=None, height_ratios=None)
+```
+
+- `nrows`：表示行数。
+- `ncols`：表示列数。
+- `figure`：表示布局的画布。
+- `left，bottom，right，top`：表示子图的范围。
+- `wspace`：表示子图之间预留的宽度量。
+- `hspace`：表示子图之间预留的高度量。
+
+```python
+import matplotlib.gridspec as gredspec
+import matplotlib.pyplot as plt
+
+fig2 = plt.figure()
+spec2 = gredspec.GridSpec(ncols=2, nrows=2, figure=fig2)
+f2_ax1 = fig2.add_subplot(spec2[0, 0])
+f2_ax2 = fig2.add_subplot(spec2[0, 1])
+f2_ax3 = fig2.add_subplot(spec2[1, 0])
+f2_ax4 = fig2.add_subplot(spec2[1, 1])
+plt.show()
+```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311739164.png" alt="image-20231031173940055" style="zoom:50%;" />
+
+​	matplotlib中还为Figure对象提供了快速添加布局结构的方法`add_gridspec() `。
+
+```python
+import matplotlib.gridspec as gredspec
+import matplotlib.pyplot as plt
+
+fig3 = plt.figure()
+gs =fig3.add_gridspec(3, 3)
+f3_ax1 = fig3.add_subplot(gs[0, :])
+f3_ax2 = fig3.add_subplot(gs[0, :-1])
+f3_ax3 = fig3.add_subplot(gs[1:, -1])
+f3_ax4 = fig3.add_subplot(gs[-1, 0])
+f3_ax5 = fig3.add_subplot(gs[-1, -1])
+plt.show()
+```
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311743651.png" alt="image-20231031174315554" style="zoom:50%;" />
+
+### 4.4.实例：2018上半年某品牌汽车销售情况
+
+​	随着人们的生活水平日益提高，汽车已经成为人们出行的代步工具，为人们的生活带来了便利。已知某品牌汽车在北京、上海、广州、深圳、浙江、山东设立了6个分公司，各分公司在2018年的销售额十分可观。
+
+​	本实例要求根据下表的数据，分别使用3个子图进行展示：在第0行第0列的区域中，绘制反映2018上半年汽车销售额的柱形图；在第1行第0列和第1行第1列的区域中，绘制反映2018上半年各分公司汽车销量的折线图和堆积面积图。
+
+![image-20231031174421026](https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311744122.png)
+
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202310311744423.png" alt="image-20231031174432321" style="zoom:50%;" />
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+plt.rcParams['font.sans-serif'] = ['SimHei']
+plt.rcParams['axes.unicode_minus'] = False
+
+
+x_month = np.array(['1月', '2月', '3月', '4月', '5月', '6月'])
+y_sales = np.array([2150, 1050, 1560, 1480, 1530, 1490])
+x_citys = np.array(['北京', '上海', '广州', '深圳', '浙江', '山东'])
+y_sale_count = np.array([83775, 62860, 59176, 64205, 48671, 39968])
+# 创建画布和布局
+fig = plt.figure(constrained_layout=True)
+gs = fig.add_gridspec(2, 2)
+ax_one = fig.add_subplot(gs[0, 1])
+ax_two = fig.add_subplot(gs[1, 0])
+ax_thr = fig.add_subplot(gs[1, 1])
+# 第一个子图
+ax_one.bar(x_month, y_sales, width=0.5, color='#3299CC')
+ax_one.set_title('2018年上半年某品牌汽车的销售额')
+ax_one.set_ylabel('销售额（亿元）')
+# 第二个子图
+ax_two.plot(x_citys, y_sale_count, 'm--o', ms=8)
+ax_two.set_title('分公司某品牌汽车的销量')
+ax_two.set_ylabel('销量（辆）')
+# 第三个子图
+ax_thr.stackplot(x_citys, y_sale_count, color='#9999FF')
+ax_thr.set_title('分公司某品牌汽车的销量')
+ax_thr.set_ylabel('销量（辆）')
+plt.show()
+```
 
