Python办公自动化更新文档

--- a/讲义/Python面向对象/面向对象+异常+模块+文件/类与面向对象.md
+++ b/讲义/Python面向对象/面向对象+异常+模块+文件/类与面向对象.md
@@ -10,7 +10,7 @@
 
 ## 1.类与对象
 
-​	面向对象编程思想力求在程序中对事物的描述与该事物在现实中的形态保持一致。为此类的概念就产生了。某一些事物中具有相同的特征，我们称这一些事物为某类。如汽车有品牌、价格等的不同，但我们都具备了出行的功能，所以无论是奔驰宝马，还是货车客车，我们都称之为汽车这一类。
+​	面向对象编程思想力求在程序中对事物的描述与该事物在现实中的形态保持一致。为此类的概念就产生了。某一些事物中具有相同的特征，我们称这一些事物为某类。如汽车有品牌、价格等的不同，但它们都具备了出行的功能，所以无论是奔驰宝马，还是货车客车，我们都称之为汽车这一类。
 
 ```python
 """
@@ -121,7 +121,7 @@ print(my_car.wheels)
 my_car.drive()
 ```
 
-<img src="C:%5CUsers%5CHP%5CDesktop%5C202302171708655.png" style="zoom:67%;" />
+<img src="https://gitee.com/zou_tangrui/note-pic/raw/master/img/202404261703886.png" style="zoom:67%;" />
 
 
 
