提交面向对象学生管理系统

--- a/讲义/Python面向对象/面向对象+异常+模块+文件/类与面向对象.md
+++ b/讲义/Python面向对象/面向对象+异常+模块+文件/类与面向对象.md
@@ -53,7 +53,7 @@ w01.play()# 自动将对象地址传入方法
 
 ```
 
-![](C:%5CUsers%5CHP%5CDesktop%5C202302171708654.jpg)
+![](https://gitee.com/zou_tangrui/note-pic/raw/master/img/202405101622614.jpg)
 
 ### 1.1.类的定义
 
@@ -338,7 +338,7 @@ print(sys.getrefcount(destruction))
 ​	类方法和实例方法有所不同，主要体现在以下几点：
 
 - 类方法使用装饰器@classmethod修饰；
-- 类方法的第一个参数时cls，而不是self，它代表类的本身；
+- 类方法的第一个参数是cls，而不是self，它代表类的本身；
 - 类方法既可由对象调用，也可直接由类调用；
 - 类方法可以修改类属性，以及如何使用类方法修改类属性。
 
