12周软件一班代码

--- a/讲义/Python面向对象/面向对象+异常+模块+文件/类与面向对象.md
+++ b/讲义/Python面向对象/面向对象+异常+模块+文件/类与面向对象.md
@@ -283,13 +283,19 @@ ICBC.print_total_money()
 ​	`__init__`方法可以根据参数(self除外)分为有参构造方法和无参构造方法，无参构造可以为属性设置初始值，此时使用该方法创建的所有对象都具有相同的初始值；若希望每次创建对象都有不同的初始值，则可以使用有参构造来实现。
 
 ```python
-class Infomation(object):
-    def __init__(self, name, sex):  # 定义有参构造方法
-        self.name = name  # 添加属性name
-        self.sex = sex  # 添加属性sex
+"""
+    构造方法：__init__()
+        python中构造函数只能有一个
+        如果想要通过无参构造创建对象，可以在构造函数内对参数设置默认值
+"""
+class Infomation:
+    def __init__(self, name="", age=0):
+        self.name = name
+        self.age = age
+
     def info(self):
-        print(f'姓名：{self.name}')
-        print(f'性别：{self.sex}')
+        print(f"{self.name}的年龄是{self.age}岁")
+
 ```
 
 ​	上述代码包含了3个参数的构造方法的Infomation类，然后通过参数name与sex为属性name和sex赋值，最后再info()方法中访问这两个属性的值。
